Zwei Bücher von McElliece

--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -1,5 +1,9 @@
 * Hadamard-Matrizen
 ** Planung
+*** Benötigte Bücher und Papers
+    - Robert McEliece: Finite fields for computer scientists
+    - Robert McEliece: The theory of information and coding
+
 ** Inhaltsverzeichnis
 *** Einführung und Übersicht
     - Definition Hadamard-Matrix
