--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -2,7 +2,6 @@
 ** Planung
 *** Benötigte Bücher und Papers
     - Robert McEliece: Finite fields for computer scientists
-    - Robert McEliece: The theory of information and coding
     - [[http://dl.acm.org/citation.cfm?id=1861432][Some really beautiful Hadamard matrices (Dillon)]]
 
 ** Inhaltsverzeichnis
@@ -46,6 +45,7 @@
     - [[http://books.google.de/books?id=cv5N0JgGpd8C&printsec=frontcover&dq=hadamard+matrices+and+their+applications&hl=de&sa=X&ei=qNBfUuKTMIWptAaghICYDA&ved=0CEUQ6AEwAQ#v=onepage&q=hadamard%20matrices%20and%20their%20applications&f=false][Horadam: Hadamard matrices and their applications]]
     - [[http://link.springer.com/book/10.1007/BFb0069907/page/1][Wallis, Street, Wallis: Combinatorics: Room Squares, Sum-Free Sets, Hadamard Matrices]]
     - [[http://link.springer.com/book/10.1007/BFb0101073/page/1][Agaian: Hadamard Matrices and their applications]]
+    - [[http://books.google.de/books?id=fi8jvms5fVUC&printsec=frontcover&hl=de#v=onepage&q&f=false][Robert J. McEliece: The Theory of Information and Coding]]
     
 *** Papers
     - [[http://link.springer.com/article/10.1007/BF01864168][On a series of Hadamard matrices of order 2 t and the maximal excess of Hadamard matrices of order 22 (Yamada)]]
