--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -16,7 +16,7 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
-\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
@@ -30,7 +30,7 @@
 			       % Schriften Probleme. Dies behebt xfrac. Daher
 			       % sollte eher das Paket verwendet werden.
                                % xfrac muss vor mathtools geladen werden!
-
+\usepackage{lmodern}
 \usepackage{textcomp}           % wird benötigt, damit der \textbullet
                                 % für itemize in lmodern gefunden wird.
 
@@ -68,6 +68,26 @@
   Nach der Titelseite kommt hier eine Zusammenfassung der wesentlichen
   Inhalte und der Schlagwörter hin.
 \end{abstract}
+
+\tableofcontents
+
+\addchap{Vorwort}
+\label{chap:vorwort}
+
+\begin{itemize}
+\item Anlass, Stand zu Beginn und Ergebnisse
+\item Danksagung
+\end{itemize}
+
+\chapter{Eine Einführung in Hadamard-Matrizen}
+\label{chap:einf}
+
+\chapter{Konstruktion von Hadamard-Matrizen}
+\label{chap:konstr}
+
+\chapter{Anwendungen von Hadamard-Matrizen}
+\label{chap:anwend}
+
 
 
 \end{document}
