--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -48,7 +48,7 @@
 \usepackage[thmmarks,hyperref,amsmath]{ntheorem} % für die Theorem-Umgebungen
                                          % (satz, defini, bemerk)
 \usepackage{xspace}      % wird weiter unten gebraucht
-\usepackage{slashbox}    % für schräge Striche im links oben in der
+%\usepackage{slashbox}    % für schräge Striche im links oben in der
                          % Tabelle; s. texdoc slashbox
 
 \usepackage{paralist}    % besseres enumerate und itemize und neue
