--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -16,7 +16,7 @@
                    % Befehle oder solche, die man nicht in LaTeX verwenden
                    % soll -- l2tabu-Checker in LaTeX
 
-%\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
+\RequirePackage[ngerman=ngerman-x-latest]{hyphsubst} % einbinden der neuen
                    % Trennmuster, diese korrigieren einige Fehler der alten
                    % und bieten mehr Trennstellen
 
