--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -70,6 +70,7 @@
     - [[http://www.sciencedirect.com/science/article/pii/S0021980069801286][A note of a class of Hadamard matrices (Wallis)]]
     - [[http://link.springer.com/article/10.1007%2FBF01212983][Two Hadamard matrices of order 956 of Goethals-Seidel type (Đoković)]]
     - [[http://works.bepress.com/jseberry/308/][Orthogonal designs (Geramita, Wallis)]]
+    - [[http://ajc.maths.uq.edu.au/pdf/7/ocr-ajc-v7-p123.pdf][A product for twelve Hadamrd matrices (Launey)]]
 
 
 *** Webseiten
