--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -71,6 +71,7 @@
     - [[http://link.springer.com/article/10.1007%2FBF01212983][Two Hadamard matrices of order 956 of Goethals-Seidel type (Đoković)]]
     - [[http://works.bepress.com/jseberry/308/][Orthogonal designs (Geramita, Wallis)]]
     - [[http://ajc.maths.uq.edu.au/pdf/7/ocr-ajc-v7-p123.pdf][A product for twelve Hadamrd matrices (Launey)]]
+    - [[http://www.uow.edu.au/~jennie/WEBPDF/2005_12.pdf][On some applications of Hadamard matrices (Seberry)]]
 
 
 *** Webseiten
