--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -12,6 +12,7 @@
       + isomorphe, äquivalente
       + komplexe
       + "Skew"
+      + amicable (freundliche, verträgliche)
     - Beispiele
     - Definition Kronecker-Produkt
 
