--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -66,6 +66,7 @@
     - [[http://download.springer.com/static/pdf/739/art%253A10.1007%252FBF01941473.pdf?auth66=1382002041_af01ab9e465400a385014c51e7fbfacc&ext=.pdf][Deciding Hadamard equivalence of Hadamard matrices (Colbourn)]]
     - [[http://link.springer.com/article/10.1007%252Fs10623-003-4195-y][Symmetric (4,4)-Nets and Generalized Hadamard Matrices Over Groups of Order 4 (Harada, Lam, Tonchev)]]
     - [[http://link.springer.com/article/10.1023/A%253A1011212922844][The Existence of a Bush-Type Hadamard Matrix of Order 324 and Two New Infinite Classes of Symmetric Designs (Janko, Kharaghani, Tonchev)]]
+    - [[http://onlinelibrary.wiley.com/doi/10.1002/jcd.20043/abstract][A Hadamard matrix of order 428 (Kharaghani, Tayfeh-Rezaie)]]
     - [[http://link.springer.com/article/10.1007%252Fs10623-005-3634-3][A Series of Regular Hadamard Matrices (Crnković)]]
     - [[http://link.springer.com/article/10.1007/s003730200024][Some Properties of Hadamard Matrices Coming from Dihedral Groups (Kimura, Niwasaki)]]
     - [[http://link.springer.com/article/10.1023%252FA%253A1008241809111][Hadamard Matrices from Weighing Matrices via Signed Groups (Craigen, Kharaghani)]]
