--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -83,6 +83,8 @@
     - [[http://ajc.maths.uq.edu.au/pdf/7/ocr-ajc-v7-p123.pdf][A product for twelve Hadamard matrices (Launey)]]
     - [[http://www.uow.edu.au/~jennie/WEBPDF/2005_12.pdf][On some applications of Hadamard matrices (Seberry)]]
     - [[http://onlinelibrary.wiley.com/doi/10.1002/jcd.21323/full][Hadamard matrices of order 32 (Kharaghani, Tayfeh-Rezaie)]]
+    - [[http://onlinelibrary.wiley.com/doi/10.1002/jcd.21318/full][Turyn-Type Sequences: Classification, Enumeration, and
+      Construction (Best, Ðoković, Kharaghani, Ramp)]] (noch unklar, ob benötigt)
 
 
 *** Webseiten
