Begriff der Q-Äquivalenz aufgenommen

--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -34,7 +34,9 @@
     - Definition Hadamard-Matrix
       + reguläre HM (konstante Zahl +1 über alle Zeilen und Spalten)
       + normalisierte
-      + isomorphe, äquivalente
+      + isomorphe
+      + äquivalente
+      + Q-äquivalente
       + komplexe
       + "Skew"
       + amicable (freundliche, verträgliche)
