Paper von Hall hinzu

--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -97,6 +97,7 @@
     - [[http://download.springer.com/static/pdf/532/art%25253A10.1023%25252FA%25253A1009958227635.pdf?auth66%3D1382001939_2d9382c1e5bb3f9bb8784872f9da378d&ext%3D.pdf][Remarks on Hadamard Matrices and Lattices (Plesken)]]
     - [[http://link.springer.com/chapter/10.1007/BFb0069911][Hadamard Matrices (Wallis)]]
     - [[http://www.ams.org/journals/bull/1962-68-03/S0002-9904-1962-10761-7/home.html][Discovery of an Hadamard matrix of order 92 (Baumert, Golomb, Hall)]]
+    - A survey of difference sets (Hall)
     - [[http://link.springer.com/article/10.1007%252FBF01174141][On a new class of Hadamard determinants (Brauer)]]
     - [[http://www.ams.org/journals/bull/1947-53-06/S0002-9904-1947-08853-4/][Note on Hadamard's determinant theorem (Williamson)]]
     - [[http://www.sciencedirect.com/science/article/pii/0097316576900625#][On the existence of Hadamard matrices (Wallis)]]
