--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -7,6 +7,7 @@
       R. Istituto Lombardo di Scienze e Lettere 31 (1898) 1441–1446.
     - R. E. A. C. Paley, On orthogonal matrices, J. Mathematics and
       Physics 12 (1933) 311–320.
+    - Massoud Malek, Introduction to Coding Theory
 
 ** Inhaltsverzeichnis
 *** Einführung und Übersicht
