allgemeine TODOs eingefügt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -66,16 +66,19 @@
 
 \tableofcontents
 
+\todo[inline]{passende Schrift wählen}
+
 \addchap{Vorwort}
 \label{chap:vorwort}
 
 \begin{itemize}
 \item Anlass, Stand zu Beginn und Ergebnisse
 \item Danksagung
-\end{itemize}
+\end{itemize}\todo{Schreiben}
 
 \chapter{Eine Einführung in Hadamard-Matrizen}
 \label{chap:einf}
+
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
