Paket nameauth aktiviert
Das Paket nameauth hilft, Fehler bei der Namensschreibung zu vermeiden
und ggf. Namen zu indexieren. Ersten Eintrag dazu erstellt.

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -48,11 +48,20 @@
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
 
+\usepackage{nameauth}
+
+%%%% Namen der verwendeten Autoren
+\begin{nameauth}
+  \<Sylvester & James Joseph & Sylvester & >
+\end{nameauth}
+
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 \newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+
+
 
 \begin{document}
 \title{Hadamard-Matrizen}
@@ -82,6 +91,7 @@
 Das folgende Kapitel ist eine Einführung in die Thematik der
 Hadamard-Matrizen. Grundlegende Begriffe werden definiert und anhand
 von Beispielen erläutert.
+
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
