--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -48,6 +48,12 @@
                          % Markierungen für offene Aufgaben zu setzen; wird
                          % auch für \help (s.u.) verwendet
 
+
+\usepackage[backend=bibtex]{biblatex}  % Bibliography
+\bibliography{hadamard}
+
+\usepackage[autostyle,german=guillemets]{csquotes}
+
 \usepackage{nameauth}
 
 %%%% Namen der verwendeten Autoren
@@ -92,6 +98,11 @@ Das folgende Kapitel ist eine Einführung in die Thematik der
 Hadamard-Matrizen. Grundlegende Begriffe werden definiert und anhand
 von Beispielen erläutert.
 
+\section{Einleitung}
+\label{sec:einleitung}
+
+Die Forschung zu Hadamard-Matrizen begann im Jahr 1867. Der britische
+Mathematiker \Sylvester{} veröffentlichte den Artikel \citetitle{Sylvester1867} \cite{Sylvester1867}
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
@@ -99,6 +110,6 @@ von Beispielen erläutert.
 \chapter{Anwendungen von Hadamard-Matrizen}
 \label{chap:anwend}
 
-\todo[inline]{Bibliographie einbinden}
+\printbibliography{}
 
 \end{document}
