--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -20,7 +20,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[ngerman]{babel}
 
-% \usepackage{xfrac}           % xfrac erfüllt einen ähnlichen Zweck wie
+\usepackage{xfrac}           % xfrac erfüllt einen ähnlichen Zweck wie
 			       % nicefrac. Jedoch macht nicefrac bei einigen
 			       % Schriften Probleme. Dies behebt xfrac. Daher
 			       % sollte eher das Paket verwendet werden.
@@ -59,7 +59,7 @@
 %%%% Namen der verwendeten Autoren
 \begin{nameauth}
   \<Sylvester & James Joseph & Sylvester & >
-  \<Hadamard & Jacques Solomon & Hadamard & Jacques Hadamard >
+  \<Hadamard & Jacques Solomon & Hadamard & Jacques >
 \end{nameauth}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -68,7 +68,12 @@
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
-
+% Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
+% Striche bekommt, sind diese Befehle da. Damit kann man nicht die
+% rechten Striche vergessen und es wird etwas übersichtlicher. Aus
+% mathtools.pdf, z. B. \abs[\big]{\abs{a}-\abs{b}} \leq \abs{a+b}
+\DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
+\DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
 
 \begin{document}
 \title{Hadamard-Matrizen}
@@ -105,7 +110,14 @@ von Beispielen erläutert.
 Die Forschung zu Hadamard-Matrizen begann im Jahr 1867. Der britische
 Mathematiker \Sylvester{} veröffentlichte den Artikel
 \citetitle{Sylvester1867}\cite{Sylvester1867}. Darin stellte er
-Beispiele und Konstruktionsverfahren vor. 
+Beispiele und Konstruktionsverfahren vor. \Hadamard{}\todo{Wie bekommt
+  man den Joseph?}  bewies 1893 die Ungleichung
+\begin{gather}\label{eq:had-ungl}
+  \abs{\det (a_{ij})}\leq\prod_{j}\left(\sum_{i} \abs{a_{ij}}^{2}\right)^{\sfrac{1}{2}}
+\end{gather}
+Dies ist als \Hadamard sches Problem der maximalen Determinante in
+die Literatur eingegangen. Insbesondere zeigte \Hadamard{}, wann
+Gleichheit gilt. 
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
