Befehl \highl definiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -68,6 +68,14 @@
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
+% Um wichtige Begriffe im Text überall gleich vorzuheben (gleiches
+% Markup), sollte dieser Befehl verwendet werden. Das Argument wird
+% automatisch als Indexeintrag verwendet. Dieser kann aber auch als
+% optionales Argument selbst bestimmt werden.
+\newcommand*{\highl}[2][]{\textbf{\boldmath{#2}}%
+  \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
+}
+
 % Um sicherzustellen, dass jeder Betrag/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
 % rechten Striche vergessen und es wird etwas übersichtlicher. Aus
@@ -117,7 +125,7 @@ Beispiele und Konstruktionsverfahren vor. \Hadamard{}\todo{Wie bekommt
 \end{gather}
 Dies ist als \Hadamard sches Problem der maximalen Determinante in
 die Literatur eingegangen. Insbesondere zeigte \Hadamard{}, wann
-Gleichheit gilt. 
+Gleichheit gilt.
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
