--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -4,6 +4,9 @@
     - [[http://projecteuclid.org/DPubS?service%3DUI&version%3D1.0&verb%3DDisplay&handle%3Deuclid.dmj/1077472371][Hadamard’s determinant theorem and the sum of four squares (Williamson)]]
     - U. Scarpis, Sui determinanti di valore massimo, Rendiconti della
       R. Istituto Lombardo di Scienze e Lettere 31 (1898) 1441–1446.
+    - R.E. Gilman: On the Hadamard determinant problem and orthogonal
+      determinants, Bulletin Amer. Math. Soc. 37 (1931), 30--31 --> In
+      der Zeitschrift ist nur der Abstract, Paper woanders?
 
 
 ** Inhaltsverzeichnis
