--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -144,4 +144,17 @@ doi = {10.1080/14786446708639914},
 URL = {http://www.tandfonline.com/doi/abs/10.1080/14786446708639914},
 }
 
+@article{Kimura1994171,
+title = "Classification of Hadamard matrices of order 28 ",
+journal = "Discrete Mathematics",
+volume = "133",
+number = "1--3",
+pages = "171--180",
+year = "1994",
+note = "",
+issn = "0012-365X",
+doi = "http://dx.doi.org/10.1016/0012-365X(94)90024-8",
+url = "http://www.sciencedirect.com/science/article/pii/0012365X94900248",
+author = "Hiroshi Kimura"
+}
 
