--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -1,13 +1,14 @@
 @book{
 GBV-013548271,
 title = {Combinatorial theory},
-author = {Hall, Marshall},
-address = {New York [u.a.]},
-publisher = {Wiley},
+author = {Hall, Jr., Marshall},
+address = {New York},
+publisher = {John Wiley \& Sons Inc.},
 year = {1986},
-edition = {2. ed.},
-pages = {XV, 440 S.},
-note = {Literaturverz. S. 428 - 435},
+edition = {second},
+pages = {xviii+440},
+ISBN = {0-471-09138-3},
+note = {Literaturverz. S. 428--435},
 url = http://www.gbv.de/dms/hbz/toc/ht002860500.pdf,
 crossref = http://suche.thulb.uni-jena.de/vufind/Record/013548271
 }
