Eintrag von Whiteman überarbeitet

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -58,17 +58,19 @@ Zbl = {0344.05009}
 }
 
 @article{Whiteman19761,
-title = "Hadamard matrices of order 4(2p + 1) ",
-journal = "Journal of Number Theory ",
-volume = "8",
-number = "1",
-pages = "1 - 11",
-year = "1976",
-note = "",
-issn = "0022-314X",
-doi = "http://dx.doi.org/10.1016/0022-314X(76)90017-2",
-url = "http://www.sciencedirect.com/science/article/pii/0022314X76900172",
-author = "Albert Leon Whiteman"
+title = {Hadamard matrices of order {$4(2p + 1)$}},
+fjournal = {Journal of Number Theory},
+journal = {J.\,Number Theory},
+volume = {8},
+number = {1},
+pages = {1--11},
+year = {1976},
+issn = {0022-314X},
+doi =  {10.1016/0022-314X(76)90017-2},
+url = {http://www.sciencedirect.com/science/article/pii/0022314X76900172},
+author = {Whiteman, Albert Leon}
+publisher = {Elsevier Science (Academic Press), San Diego, CA},
+language = {English},
 }
 
 
