Artikel von Baumert/Hall überarbeitet

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -75,14 +75,15 @@ language = {English},
 
 
 @ARTICLE{Baumert1965169,
-author={Baumert, L.D. and Hall M., Jr.},
+author={Baumert, Leonard Daniel and Hall, Junior, Marshall},
 title={A new construction for Hadamard matrices},
-journal={Bull. Am. Math. Soc.},
+journal={Bull.\,Am.\,Math.\,Soc.},
+fjournal={Bulletin of the American Mathematical Society},
 year={1965},
 volume={71},
-pages={169-170},
-note={cited By (since 1996)4},
-source={Scopus},
+pages={169--170},
+doi = {10.1090/S0002-9904-1965-11273-3},
+issn = {0002-9904}
 }
 
 @article{Wallis1969222,
