Zwei Quellen für BiBTeX-Referenzen eingefügt

--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -137,3 +137,7 @@
      - [[http://images.math.cnrs.fr/La-conjecture-de-Hadamard-II.html][La conjecture de Hadamard (II)]]
      - [[http://neilsloane.com/hadamard/][A Library of Hadamard Matrices (Sloane)]]
      - [[http://www.uow.edu.au/~jennie/lifework.html][Lebenswerk von Jenny Seberry]]
+
+**** BiBTeX
+     - [[http://www.ams.org/mathscinet/][MathSciNet]]
+     - [[http://zbmath.org/][Zentralblatt Math]]
