--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -87,19 +87,19 @@ issn = {0002-9904}
 }
 
 @article{Wallis1969222,
-title = "A note of a class of Hadamard matrices ",
-journal = "Journal of Combinatorial Theory ",
-volume = "6",
-number = "2",
-pages = "222 - 223",
-year = "1969",
-note = "",
-issn = "0021-9800",
-doi = "http://dx.doi.org/10.1016/S0021-9800(69)80128-6",
-url = "http://www.sciencedirect.com/science/article/pii/S0021980069801286",
-author = "Jennifer Wallis"
+title = {A note of a class of {H}adamard matrices},
+fjournal = {Journal of Combinatorial Theory},
+journal = {J.\,Comb.\,Theory},
+volume = {6},
+number = {2},
+pages = {222--223},
+year = {1969},
+issn = {0021-9800},
+doi = {10.1016/S0021-9800(69)80128-6},
+url = {http://www.sciencedirect.com/science/article/pii/S0021980069801286},
+publisher = {Elsevier Science (Academic Press), San Diego, CA},
+author = {Jennifer {Seberry Wallis}}
 }
-
 
 @Article{zbMATH03095564,
     Author = {John {Williamson}},
