--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -117,9 +117,10 @@ author = {Jennifer {Seberry Wallis}}
 }
 
 @article {JCD:JCD20043,
-author = {Kharaghani, H. and Tayfeh-Rezaie, B.},
+author = {Kharaghani, Hadi and Tayfeh-Rezaie, Behruz},
 title = {A Hadamard matrix of order 428},
-journal = {Journal of Combinatorial Designs},
+fjournal = {Journal of Combinatorial Designs},
+journal = {J.\,Comb.\,Des.},
 volume = {13},
 number = {6},
 publisher = {Wiley Subscription Services, Inc., A Wiley Company},
@@ -127,22 +128,21 @@ issn = {1520-6610},
 url = {http://dx.doi.org/10.1002/jcd.20043},
 doi = {10.1002/jcd.20043},
 pages = {435--440},
-keywords = {Hadamard matrices, Turyn type sequences, base sequences, T-sequences, Yang numbers},
-year = {2005},
+year = {2005}
 }
 
 @article {JCD:JCD21323,
 author = {Kharaghani, Hadi and Tayfeh-Rezaie, Behruz},
 title = {Hadamard Matrices of Order 32},
 journal = {Journal of Combinatorial Designs},
+journal = {J.\,Comb.\,Des.},
 volume = {21},
 number = {5},
 issn = {1520-6610},
 url = {http://dx.doi.org/10.1002/jcd.21323},
 doi = {10.1002/jcd.21323},
 pages = {212--221},
-keywords = {Hadamard matrices, classification of combinatorial objects, isomorph-free generation, orderly algorithm},
-year = {2013},
+year = {2013}
 }
 
 @article{Sylvester1867,
