--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -43,6 +43,7 @@
       + "Skew"
       + amicable (freundliche, verträgliche)
       + [[http://arxiv.org/abs/1202.2025][fast-Hadamardsche Matrizen]]
+      + Anti-HM (siehe http://neilsloane.com/doc/RLG/anti.pdf)
     - Aussagen über HM + Beweise
     - Beispiele
     - Definition Kronecker-Produkt
@@ -116,6 +117,7 @@
     - [[http://www.jstor.org/discover/10.2307/2306240?uid=3737864&uid=2134&uid=2&uid=70&uid=4&sid=21102923061043][Determinants Whose Elements Are 0 and 1 (Williamson)]]
     - [[https://www.sciencedirect.com/science/article/pii/0012365X94900248][Classification of Hadamard matrices of order 28 (Kimura)]]
     - [[http://www.cs.uleth.ca/~hadi/research/real-mub-12-09.pdf][On the real unbiased Hadamard matrices (Holzmann, Kharaghani, Orrick)]]
+    - [[http://neilsloane.com/doc/RLG/anti.pdf][Anti-Hadamard Matrices (Graham, Sloane)]]
 
 
 
