Werk von Orrick eingebaut

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -1,5 +1,5 @@
-@Article{zbMATH05529217,
-    Author = {Orrick, William.\,P},
+@Article{orrick2008,
+    Author = {William P. {Orrick}},
     Title = {{Switching operations for Hadamard matrices.}},
     FJournal = {{SIAM Journal on Discrete Mathematics}},
     Journal = {{SIAM J. Discrete Math.}},
