--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -8,6 +8,8 @@
       --> Außer einem Abstract ist nichts zu finden. Der Artikel sit
       evtl. nie veröffentlicht worden. Ggf. erwähne ich das nur in der
       LaTeX-Datei.
+    - de Launey, Flannery, Horadam: Cocyclic  Hadamard matrices and
+      difference sets. Discrete Appl. Math. 102(1--2), 47--61, (2000)
 
 
 ** Inhaltsverzeichnis
