--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -10,7 +10,13 @@
       LaTeX-Datei.
     - de Launey, Flannery, Horadam: Cocyclic  Hadamard matrices and
       difference sets. Discrete Appl. Math. 102(1--2), 47--61, (2000)
-    - Ito, N.: On Hadamard groups. J. Algebra 168 (3), 981--987, (1994)
+    - Ito, N.: On Hadamard groups. J. Algebra 168 (3), 981--987,
+      (1994)
+
+*** Nächste Schritte[%]
+    - [ ] Beweis zum Grad 4 einbauen
+    - [ ] Paper von [[cathain cocyclic][Cathain]] lesen und Definition von Äquivalenz
+      entsprechend anpassen
 
 
 ** Inhaltsverzeichnis
@@ -126,6 +132,7 @@
     - [[https://www.sciencedirect.com/science/article/pii/0012365X94900248][Classification of Hadamard matrices of order 28 (Kimura)]]
     - [[http://www.cs.uleth.ca/~hadi/research/real-mub-12-09.pdf][On the real unbiased Hadamard matrices (Holzmann, Kharaghani, Orrick)]]
     - [[http://neilsloane.com/doc/RLG/anti.pdf][Anti-Hadamard Matrices (Graham, Sloane)]]
+# <<Cathain cocyclic>>
     - [[http://link.springer.com/article/10.1007/s10623-010-9385-9][The cocyclic Hadamard matrices of order less than 40 (Cathain, Röder)]]
     - [[http://link.springer.com/chapter/10.1007/978-1-4614-4109-0_13][A Bird’s-Eye View of Modern Symmetric Cryptography from Combinatorial Designs (Koukouvinos, Simos)]]
     - [[http://link.springer.com/chapter/10.1007/978-3-540-77224-8_33][A path to Hadamard matrices (Embury, Rao)]]
@@ -155,3 +162,4 @@
 **** BiBTeX
      - [[http://www.ams.org/mathscinet/][MathSciNet]]
      - [[http://zbmath.org/][Zentralblatt Math]]
+
