--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -8,8 +8,6 @@
       --> Außer einem Abstract ist nichts zu finden. Der Artikel sit
       evtl. nie veröffentlicht worden. Ggf. erwähne ich das nur in der
       LaTeX-Datei.
-    - de Launey, Flannery, Horadam: Cocyclic  Hadamard matrices and
-      difference sets. Discrete Appl. Math. 102(1--2), 47--61, (2000)
     - Ito, N.: On Hadamard groups. J. Algebra 168 (3), 981--987,
       (1994)
 
@@ -136,6 +134,7 @@
     - [[http://link.springer.com/article/10.1007/s10623-010-9385-9][The cocyclic Hadamard matrices of order less than 40 (Cathain, Röder)]]
     - [[http://link.springer.com/chapter/10.1007/978-1-4614-4109-0_13][A Bird’s-Eye View of Modern Symmetric Cryptography from Combinatorial Designs (Koukouvinos, Simos)]]
     - [[http://link.springer.com/chapter/10.1007/978-3-540-77224-8_33][A path to Hadamard matrices (Embury, Rao)]]
+    - [[https://www.sciencedirect.com/science/article/pii/S0166218X99002309?np%3Dy][de Launey, Flannery, Horadam: Cocyclic  Hadamard matrices and difference sets. Discrete Appl. Math. 102(1--2), 47--61, (2000)]]
 
 
 *** Webseiten
