--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -162,3 +162,7 @@
      - [[http://www.ams.org/mathscinet/][MathSciNet]]
      - [[http://zbmath.org/][Zentralblatt Math]]
 
+
+** Personen
+   - [[http://www.maths.nuigalway.ie/~dane/][Dane Flannery]]
+   - [[http://www.smp.uq.edu.au/people/PadraigOCathain/][Padraig Ó Catháin]]
