--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -101,6 +101,8 @@
     - Massoud Malek, Introduction to Coding Theory
     
 *** Papers
+    - [[http://www.smp.uq.edu.au/people/PadraigOCathain/Docs/HadamardTranslation.pdf][Resolutions of a question on determinants (Hadamard)]], englische
+      Übersetzung des Originalpapers
     - [[http://link.springer.com/article/10.1007/BF01864168][On a series of Hadamard matrices of order 2 t and the maximal excess of Hadamard matrices of order 22 (Yamada)]]
     - [[http://download.springer.com/static/pdf/739/art%253A10.1007%252FBF01941473.pdf?auth66=1382002041_af01ab9e465400a385014c51e7fbfacc&ext=.pdf][Deciding Hadamard equivalence of Hadamard matrices (Colbourn)]]
     - [[http://projecteuclid.org/DPubS?service%3DUI&version%3D1.0&verb%3DDisplay&handle%3Deuclid.dmj/1077472371][Hadamard’s determinant theorem and the sum of four squares (Williamson)]]
