Fehlende } oder , eingebaut

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -85,7 +85,7 @@ year = {1976},
 issn = {0022-314X},
 doi =  {10.1016/0022-314X(76)90017-2},
 url = {http://www.sciencedirect.com/science/article/pii/0022314X76900172},
-author = {Whiteman, Albert Leon}
+author = {Whiteman, Albert Leon},
 publisher = {Elsevier Science (Academic Press), San Diego, CA},
 language = {English},
 }
@@ -175,7 +175,7 @@ URL = {http://www.tandfonline.com/doi/abs/10.1080/14786446708639914},
 }
 
 @article{Kimura1994171,
-title = {Classification of {H}adamard matrices of order {$28$},
+title = {Classification of {H}adamard matrices of order {$28$}},
 fjournal = {Discrete Mathematics},
 journal = {Discrete Math.},
 volume = {133},
@@ -231,6 +231,7 @@ author = {Kimura, Hiroshi}
     Language = {English},
     MSC2010 = {05-02 05B15 94B05 62K99},
     Zbl = {0935.05001}
+}
 
 @article{hall1961hadamard,
   title={Hadamard matrices of order 16},
