Beweis zum Grad der HM eingebaut

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -271,7 +271,24 @@ erhalten.
   Sei $k\in \N$. Der Grad~$n$ einer Hadamard-Matrix ist dann $n=1,2$
   oder $n=4k$.
   \begin{proof}
-    \todo{Beweis zum Grad einbauen}
+    Hadamard"=Matrizen vom Grad~$1$ und $2$ sind in \ref{bsp:hm}
+    genannt. Im folgende wird davon ausgegangen, dass die
+    Hadamard"=Matrix aus mindestens drei Zeilen besteht. \OE{} bestehe
+    die erste Zeile aus $+1$-Einträgen. Gegebenenfalls muss die Matrix
+    durch die oben aufgeführten Umformungen transformiert werden. Die
+    ersten drei Zeilen können nun folgende Form haben:
+    \begin{gather*}
+      \begin{pmatrix}
+        +1\cdots+1 & +1\cdots+1 & +1\cdots+1 & +1\cdots+1\\
+        +1\cdots+1 & +1\cdots+1 & -1\cdots-1 & -1\cdots-1\\
+        \underbrace{+1\cdots+1}_{a} & \underbrace{-1\cdots-1}_{b} & \underbrace{+1\cdots+1}_{c} & \underbrace{-1\cdots-1}_{d}
+      \end{pmatrix}
+    \end{gather*}
+    Wegen der Orthogonalität ergibt die Summe folgendes Ergebnis:
+    \begin{gather*}
+      a+b=a+c=a+d=b+c=b+d=c+d=\sfrac{n}{2}
+    \end{gather*}
+    Also ist $a=b=c=d=\sfrac{n}{4}=k$.
   \end{proof}
 \end{satz}
 
@@ -398,7 +415,7 @@ derzeit aktuelle Abschätzung für den Grad~$n=36$ stammt von
 \Orrick{} definiert in seiner Arbeit \citetitle{orrick2008} den
 Begriff der $Q$-Äquivalenz. Dies ist eine schwächere Form des
 Äquivalenzbegriffs. Daneben gibt es weitere Versuche, eine schwächere
-Definition zur Handhabung der Äquivalenze zu finden. Hierauf soll im
+Definition zur Handhabung der Äquivalenzen zu finden. Hierauf soll im
 folgenden nicht näher eingegangen werden.
 
 
