--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -1,5 +1,5 @@
 @Article{orrick2008,
-    Author = {William P. {Orrick}},
+    Author = {William P.\, {Orrick}},
     Title = {{Switching operations for Hadamard matrices.}},
     FJournal = {{SIAM Journal on Discrete Mathematics}},
     Journal = {{SIAM J. Discrete Math.}},
@@ -163,7 +163,7 @@ year = {2013}
 }
 
 @article{Sylvester1867,
-author = {Sylvester, J.J.},
+author = {Sylvester, J.\,J.},
 title = {LX. Thoughts on inverse orthogonal matrices, simultaneous signsuccessions, and tessellated pavements in two or more colours, with applications to Newton's rule, ornamental tile-work, and the theory of numbers},
 journal = {Philosophical Magazine Series 4},
 volume = {34},
