Begriff der Äquivalenz neu definiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -387,18 +387,28 @@ zu erwarten. Andererseits sind im \autoref{fig:had20} drei
 Hadamard"=Matrizen vom Grad~$20$ aufgeführt, die nicht durch
 Umformungen entstanden sind. In den drei Fällen gibt es keine
 Möglichkeit, die Matrizen durch Vertauschung oder Multiplikation mit
-$-1$ ineinander zu überführen. Aus dieser Erkenntnis resultiert die
-folgende Definition.
-\begin{defini}[Relation auf Hadamard-Matrizen]\label{def:relation-hm}
-  Zwei Hadamard"=Matrizen~$H_{1}$ und $H_{2}$ stehen in Relation
-  zueinander, wenn sie sich durch Vertauschung von Zeilen und Spalten
-  oder durch Multiplikation von Zeilen und Spalten mit $-1$ ineinander
-  überführen lassen. Schreibweise: $H_{1}\sim H_{2}$.
+$-1$ ineinander zu überführen.
+
+In der Literatur wird von äquivalenten Hadamard"=Matrizen gesprochen,
+wenn sich zwei Hadamard"=Matrizen durch Vertauschung von Reihen oder
+Spalten oder Multiplikation mit $-1$ ineinander überführen
+lassen. Diese Transformation kann ebenfalls durch Multiplikation mit
+entsprechenden Permutationsmatrizen dargestellt werden. Im Rahmen
+dieser Arbeit steht der Begriff \enquote{Permutationsmatrix} für eine
+$n\times n$ Matrix mit Einträgen aus $0$ und $\pm 1$. Dabei gibt es in
+genau einer Zeile und Spalte einen Eintrag, der von $0$ verschieden
+ist. Der Begriff der Äquivalenz wird nun unter Ausnutzung dieser
+Tatsache formuliert.
+\begin{defini}
+  Seien $H_{1}$ und $H_{2}$ zwei $n\times n$ Hadamard"=Matrizen sowie
+  $P$, $Q$ zwei $n\times n$ Permutationsmatrizen. Die Matrizen $H_{1}$
+  und $H_{2}$ heißen
+  \highl[Hadamard-Matrix!äquivalent]{äquivalent}\index{äquivalent},
+  wenn gilt
+  \begin{gather*}
+    H_{1} = PH_{2}Q^{T}
+  \end{gather*}
 \end{defini}
-Die Relation aus \autoref{def:relation-hm} ist reflexiv, symmetrisch
-und transitiv. Damit ist es eine Äquivalenzrelation. Im folgenden
-werden daher solche Hadamard"=Matrizen auch als
-\highl{äquivalent}\index{Hadamard-Matrix!äquivalent} bezeichnet.
 
 Damit zerfallen die Hadamard"=Matrizen vom Grad~$n$ in
 Äquivalenzklassen. Für die Grade~$1$, $2$, $4$, $8$ und $12$ existiert
