Eintrag von Horadam hinzugefügt (TODO: Eintrag vervollständigen)

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -311,3 +311,21 @@ author = {Kimura, Hiroshi}
     DOI = {10.1007/BF01650080},
     Zbl = {0109.25704}
 }
+
+@Book{HoradamHM1951,
+  author =	 {Horadam, Kathy J.},
+  ALTeditor =	 {},
+  title =	 {Hadamard matrices and their applications},
+  publisher =	 {Princeton University Press},
+  year =	 {1951},
+  OPTkey =	 {},
+  OPTvolume =	 {},
+  OPTnumber =	 {},
+  OPTseries =	 {},
+  OPTaddress =	 {},
+  edition =	 {First},
+  OPTmonth =	 {},
+  OPTnote =	 {},
+  OPTannote =	 {}
+}
+
