--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -414,23 +414,23 @@ Damit zerfallen die Hadamard"=Matrizen vom Grad~$n$ in
 Äquivalenzklassen. Für die Grade~$1$, $2$, $4$, $8$ und $12$ existiert
 eine Äquivalenzklasse. Für $n=16$ fand \Hall{} 1961 heraus, dass es
 fünf Äquivalenzklassen gibt\cite{hall1961hadamard}. Vier Jahre später
-zeigte er, dass es für $n=20$ zwei Klassen weniger
-gibt\cite{hall1965hadamard}.  Die Klassifikation von $n=24$ wurde 1989
+zeigte er, dass es $n=20$ zwei Klassen weniger
+hat\cite{hall1965hadamard}.  Die Klassifikation von $n=24$ wurde 1989
 durch \Kimura{} abgeschlossen\cite{zbMATH04135959}. Aufbauend auf
 einer Arbeit von Ito et.\,al \cite{zbMATH03749020} zeigte er, dass
 60~Äquivalenzklassen existieren. Schließlich existieren für
-Hadamard"=Matrizen vom Grad~$28$ insgesamt 487~Klassen\todo{Alle Werke
-  zitieren}. Bei höheren Graden ist die Anzahl nicht mehr einfach
-ermittelbar. Die Literatur spricht hier von einer algorithmischen
-Explosion und hat diese Fälle durch Abschätzungen nach unten
-behandelt. Erst im Jahr 2013 gelang es \Kharaghani{} und \Tayfeh{} die
-Anzahl der Äquivalenzklassen genau zu bestimmen. In ihrer Arbeit
-\citetitle{JCD:JCD21323} \cite{JCD:JCD21323} kommen sie zu dem
-Ergebnis, dass genau \num{13710027}~Äquivalenzklassen existieren. Die
-derzeit aktuelle Abschätzung für den Grad~$n=36$ stammt von
-\Orrick{}\cite{orrick2008} und besagt, dass die Anzahl der
-Äquivalenzklassen größer als \num{18292717} ist\todo{Aktuellere
-  Papers?}.
+Hadamard"=Matrizen vom Grad~$28$ insgesamt
+487~Klassen\cite{HoradamHM1951}. Bei höheren Graden ist die Anzahl
+nicht mehr einfach ermittelbar. Die Literatur spricht hier von einer
+algorithmischen Explosion und hat diese Fälle durch Abschätzungen nach
+unten behandelt. Erst im Jahr 2013 gelang es \Kharaghani{} und
+\Tayfeh{} die Anzahl der Äquivalenzklassen genau zu bestimmen. In
+ihrer Arbeit \citetitle{JCD:JCD21323} \cite{JCD:JCD21323} kommen sie
+zu dem Ergebnis, dass genau \num{13710027}~Äquivalenzklassen
+existieren. Zum Zeitpunkt der Niederschrift dieser Arbeit existierte
+aktuellste Abschätzung für den Grad~$n=36$ von
+\Orrick{}\cite{orrick2008}. Diese besagt, dass die Anzahl der
+Äquivalenzklassen größer als \num{18292717} ist.
 
 \Orrick{} definiert in seiner Arbeit \citetitle{orrick2008} den
 Begriff der $Q$-Äquivalenz. Dies ist eine schwächere Form des
