--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -572,11 +572,11 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{enumerate}
    \item Die Abbildung $f$ heißt genau dann \highl{Homomorphismus}, wenn für
     alle $a,b\in M$ gilt: $f(ab)=f(a)f(b)$.
-   \item $f$ Monomorphismus $\Leftrightarrow f$  injektiver Homomorphismus
-   \item $f$ Epimorphismus $\Leftrightarrow f$ surjektiver Homomorphismus
-   \item $f$ Isomorphismus $\Leftrightarrow f$ bijektiver Homomorphismus
-   \item $f$ Endomorphismus $\Leftrightarrow f$ Homomorphismus und $M=N$
-   \item $f$ Automorphismus $\Leftrightarrow f$ bijektiver Endomorphismus
+   \item $f$ \highl{Monomorphismus} $\Leftrightarrow f$  injektiver Homomorphismus
+   \item $f$ \highl{Epimorphismus} $\Leftrightarrow f$ surjektiver Homomorphismus
+   \item $f$ \highl{Isomorphismus} $\Leftrightarrow f$ bijektiver Homomorphismus
+   \item $f$ \highl{Endomorphismus} $\Leftrightarrow f$ Homomorphismus und $M=N$
+   \item $f$ \highl{Automorphismus} $\Leftrightarrow f$ bijektiver Endomorphismus
   \end{enumerate}
   Wir setzen $\Hom(M,N)\coloneqq\Set{f\colon M\rightarrow N | f \text{
   Homomorphismus}}, \End(M)\coloneqq\Hom(M,M)$ und 
