Definition Kronecker-Produkt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -445,6 +445,32 @@ Begriff der $Q$-Äquivalenz. Dies ist eine schwächere Form des
 Definition zur Handhabung der Äquivalenzen zu finden. Hierauf soll im
 folgenden nicht näher eingegangen werden.
 
+\section{Weitere Begriffe}
+\label{sec:weitere-begriffe}
+
+Der folgende Abschnitt führt Begriffe ein, die für die weitere Arbeit
+von Wichtigkeit sind.
+
+\subsection{Kronecker-Produkt}
+\label{sec:kronecker-produkt}
+
+\begin{defini}
+  Sei$R$ ein Ring, $A$ eine $m\times m$ Matrix und $B$ eine $n\times
+  n$ Matrix mit $a_{ij}, b_{kl}\in R$ für $i,j=1,\dots,m$ und
+  $k,l=1,\dots,n$. Das \highl{Tensorprodukt} $A\otimes B$ in
+  \autoref{eq:kron-prod} wird als \highl{Kronecker-Podukt} bezeichnet.
+  \begin{gather}
+    \label{eq:kron-prod}
+    A\otimes B=
+    \begin{pmatrix}
+      a_{11}B & a_{12}B & a_{13}B & \dots& a_{1m}B\\
+      a_{21}B & a_{22}B & a_{23}B & \dots& a_{2m}B\\
+      \hdots& \hdots&\ddots& \hdots& \hdots\\
+      a_{m1}B & a_{m2}B & a_{m3}B & \dots& a_{mm}B
+    \end{pmatrix}
+  \end{gather}
+\end{defini}
+
 
 
 \chapter{Konstruktion von Hadamard-Matrizen}
