Eigenschaften vom Kronecker-Produkt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -471,6 +471,34 @@ von Wichtigkeit sind.
   \end{gather}
 \end{defini}
 
+Das Kronecker"=Produkt stellt die Grundlage für viele
+Konstruktionsverfahren von \Hadamard"=Matrizen dar. Daher sind die
+Elemente aus $A$ und $B$ in den folgenden Betrachtungen meist aus
+$\Z$ bzw. aus der Menge $\{0, \pm1\}$. Weiterhin kann das
+Kronecker"=Produkt allgemeiner für $m\times n$ und $p\times q$
+Matrizen definiert werden. Da im Rahmen der Arbeit in der Regel nur
+quadratische Matrizen betrachtet werden, wurde diese Einschränkung
+vorgenommen.
+
+Folgende Eigenschaften gelten für das Kronecker"=Produkt:
+\begin{itemize}
+\item Assoziativität: $A\otimes(B\otimes C)= (A\otimes B)\otimes C$
+  für Matrizen $A$, $B$ und $C$ mit Einträgen aus einem Ring~$R$.
+\item Distributivität: $A\otimes(B+C)= (A\otimes B)+(A\otimes C)$ und
+  $(A+B)\otimes C= (A\otimes C)+ (B\otimes C)$ für
+  Matrizen $A$, $B$ und $C$  mit Einträgen aus einem Ring~$R$.
+\item Seien $A$, $B$, $C$ und $D$ vier $n\times n$ Matrizen. Dann
+  gilt, $(A\otimes B)(C\otimes D)= AC\otimes BD$.
+\item Die transponierte Matrix aus dem Kronecker"=Produkt entspricht
+  dem Kronecker"=Produkt der transponierten Matrizen: $(A\otimes
+  B)^{T}= A^{T}\otimes B^{T}$.
+\item Für quadratische, reguläre Matrizen entspricht das Inverse des
+  Kronecker"=Produkts dem Kronecker"=Produkt der inversen Matrizen:
+  $(A\otimes B)^{-1}= A^{-1}\otimes B^{-1}$.
+\end{itemize}
+
+
+
 
 
 \chapter{Konstruktion von Hadamard-Matrizen}
