--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -537,8 +537,49 @@ Ordnung~$2^{n}$ für $n\geq 1$ zu konstruieren. Die Matrix~$H_{1}$ ist
 definiert wie in \autoref{bsp:hm}.
 \begin{defini}
   \Hadamard"=Matrizen nach \Sylvester{} sind Matrizen der Form
-  $\{H_{i}=\otimes^{i} H_{1}\colon i\geq1\}$.
+  $\{H_{i}=\otimes^{i} H_{1}\colon i\geq1\}$. Dabei bezeichnet
+  $\otimes^{i}$ die $i$-fache Hintereinanderausführung des
+  Kronecker-Produkts.
 \end{defini}
+
+In der Literatur werden diese Matrizen mit $S(k)$ für $k\in\N$
+bezeichnet. Dabei ist $S(1)= H_{1}$ aus \autoref{bsp:hm}.
+\begin{bsp}
+  \begin{align*}
+    S(2) &= \otimes^{2}H_{1}= H_{1}\otimes H_{1}=     \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix} \otimes
+    \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix}\\
+    &=
+    \begin{pmatrix}
+      1    \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix} & 1    \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix} \\
+      1    \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix}  & -1    \begin{pmatrix}
+      1 & 1\\
+      1 & -1
+    \end{pmatrix}
+    \end{pmatrix}
+    =
+    \begin{pmatrix}
+      1 & 1& 1 & 1\\
+      1 & -1 & 1& -1\\
+      1 & 1 & -1 & -1\\
+      1 & -1 & -1 & 1
+    \end{pmatrix}
+  \end{align*}
+\end{bsp}
 
 \section{Konstruktionen nach \Payley}
 \label{sec:konst-payley}
