--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -499,6 +499,18 @@ Kronecker"=Produkt:\todo{Eventuell weitere ergänzen}
 \end{itemize}
 
 
+\subsection{Quadratischer Rest und Legendre-Symbol}
+\label{sec:quadr-resid}
+
+\begin{defini}
+  Seien $a\in\Z$ und $n\in\N$ teilerfremd. Dann heißt $a$
+  \highl[Rest!quadratischer]{quadratischer Rest} modulo $n$, wenn die
+  Kongruenz $b^{2}\equiv a\pmod{n}$ für $b\in\Z$ lösbar
+  ist. Andernfalls heißt $a$ \highl{Nichtrest}.
+\end{defini}
+\todo{Eventuell Eigenschaften von QR}
+
+
 
 
 
