--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -559,7 +559,7 @@ Kronecker"=Produkt:\todo{Eventuell weitere ergänzen}
 Eine Annährung an das Problem von \Hadamard{} erfolgt über die
 explizite Konstruktion von \Hadamard "=Matrizen. So zeigte bereits
 \Sylvester{}\cite{Sylvester1867}, dass sich für $n\geq1$
-\Hadamard"=Matrizen der Ordnung $2^{n}$ konstruieren lassen. Nachdem
+\Hadamard"=Matrizen vom Grad~$2^{n}$ konstruieren lassen. Nachdem
 \Hadamard{} in seiner Arbeit einige Spezialfälle zeigen konnte, gelang
 es \Payley{} zwei neue allgemeine Konstruktionen zu finden. Seither
 wurden die Verfahren weiter verfeinert. Allerdings verbleiben auch in
@@ -580,7 +580,7 @@ vorzunehmen\cite{zbMATH02128113}.
 Die Multiplikationstheoreme nutzen den Fakt, dass das
 (Kronecker-)Produkt zweier \Hadamard"=Matrizen wieder eine
 \Hadamard"=Matrix ist. \Sylvester{} nutzte dies in seiner
-Konstruktion für Matrizen der Ordnung~$2^{k}$ für
+Konstruktion für Matrizen des Grads~$2^{k}$ für
 $k\in\N$.
 
 Die Konstruktionsverfahren nach \Payley{} sind direkte
@@ -595,8 +595,8 @@ Plug"=In"=Methoden.
 
 \Sylvester{} präsentierte als Erster ein direktes
 Konstruktionsverfahren. Hierzu nutzte er das Kronecker"=Produkt
-(\autoref{sec:kronecker-produkt}) um \Hadamard"=Matrizen der
-Ordnung~$2^{n}$ für $n\geq 1$ zu konstruieren. Die Matrix~$H_{1}$ ist
+(\autoref{sec:kronecker-produkt}) um \Hadamard"=Matrizen vom
+Grad~$2^{n}$ für $n\geq 1$ zu konstruieren. Die Matrix~$H_{1}$ ist
 definiert wie in \autoref{bsp:hm}.
 \begin{defini}
   \Hadamard"=Matrizen nach \Sylvester{} sind Matrizen der Form
@@ -659,7 +659,25 @@ Legendre-Symbol wurden in \autoref{sec:quadr-resid} eingeführt.
 
 \section{Konstruktion nach \Williamson}
 
-
+\Willamson{} legte in seiner Arbeit
+\citetitle{zbMATH03095564}\cite{zbMATH03095564} den Grundstein für
+eine weitere Klasse von Konstruktionsverfahren. Er definierte vier
+Matrizen, die er zu einer \Hadamard"=Matrix kombinierte.
+\begin{defini}
+  Seien $A$, $B$, $C$ und $D$ Matrizen vom Grad~$k$ mit Einträgen
+  aus $\{\pm1\}$ mit der Eigenschaft $XY^{T}= YX^{T}$ für
+  $X,Y\in\{A,B,C,D\}$ und $X\neq Y$ sowie
+  $AA^{T}+BB^{T}+CC^{T}+DD^{T}= 4kI_{k}$. Dann ergibt sich mit
+  \begin{gather*}
+    \begin{pmatrix}
+      A & B & C & D\\
+      B & -A & D & -C\\
+      C & -D & -A & B\\
+      D & C & -B & -A
+    \end{pmatrix}
+  \end{gather*}
+  eine \Hadamard"=Matrix vom Grad~$4k$.
+\end{defini}
 
 
 
