--- a/kubieziel-hadamard/hadamard.org
+++ b/kubieziel-hadamard/hadamard.org
@@ -11,10 +11,12 @@
     - Ito, N.: On Hadamard groups. J. Algebra 168 (3), 981--987,
       (1994)
 
-*** Nächste Schritte[%]
-    - [ ] Beweis zum Grad 4 einbauen
+*** Nächste Schritte[33%]
+    - [X] Beweis zum Grad 4 einbauen
     - [ ] Paper von [[cathain cocyclic][Cathain]] lesen und Definition von Äquivalenz
       entsprechend anpassen
+    - [ ] Blick ins Buch »Vorlesungen über Funktionalanalysis« von
+      Riesz und Nagy
 
 
 ** Inhaltsverzeichnis
