--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -282,7 +282,7 @@ Spalten~$i$ und $j$ für $i\neq j$ entspricht nach der
 Zeile~$j$. Das ergibt aber $0$.
 
 Weiterhin ist die transponierte Hadamard-Matrix wiederum eine
-Hadamard-Matrix. Wenn die \autoref{eq:had-ungl} mit $n$ dividiert
+Hadamard-Matrix. Wenn die \autoref{eq:had-ungl} durch $n$ dividiert
 wird, ergibt sich $\sfrac{H}{\sqrt{n}}\cdot\sfrac{H^{T}}{\sqrt{n}}=
 I_{n}$. Aus der linearen Algebra ist bekannt, dass eine Matrix genau
 dann surjektiv ist, wenn diese injektiv ist. Da aber
