--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -188,30 +188,30 @@
 \makeatother
 
 
-%% Legendre-Symbol
-\makeatletter
-\def\legendre@dash#1#2{\hb@xt@#1{%
-  \kern-#2\p@
-  \cleaders\hbox{\kern.5\p@
-    \vrule\@height.2\p@\@depth.2\p@\@width\p@
-    \kern.5\p@}\hfil
-  \kern-#2\p@
-  }}
-\def\@legendre#1#2#3#4#5{\mathopen{}\left(
-  \sbox\z@{$\genfrac{}{}{0pt}{#1}{#3#4}{#3#5}$}%
-  \dimen@=\wd\z@
-  \kern-\p@\vcenter{\box0}\kern-\dimen@\vcenter{\legendre@dash\dimen@{#2}}\kern-\p@
-  \right)\mathclose{}}
-\newcommand\legendre[2]{\mathchoice
-  {\@legendre{0}{1}{}{#1}{#2}}
-  {\@legendre{1}{.5}{\vphantom{1}}{#1}{#2}}
-  {\@legendre{2}{0}{\vphantom{1}}{#1}{#2}}
-  {\@legendre{3}{0}{\vphantom{1}}{#1}{#2}}
-}
-\def\dlegendre{\@legendre{0}{1}{}}
-\def\tlegendre{\@legendre{1}{0.5}{\vphantom{1}}}
-\makeatother
-
+% %% Legendre-Symbol
+% \makeatletter
+% \def\legendre@dash#1#2{\hb@xt@#1{%
+%   \kern-#2\p@
+%   \cleaders\hbox{\kern.5\p@
+%     \vrule\@height.2\p@\@depth.2\p@\@width\p@
+%     \kern.5\p@}\hfil
+%   \kern-#2\p@
+%   }}
+% \def\@legendre#1#2#3#4#5{\mathopen{}\left(
+%   \sbox\z@{$\genfrac{}{}{0pt}{#1}{#3#4}{#3#5}$}%
+%   \dimen@=\wd\z@
+%   \kern-\p@\vcenter{\box0}\kern-\dimen@\vcenter{\legendre@dash\dimen@{#2}}\kern-\p@
+%   \right)\mathclose{}}
+% \newcommand\legendre[2]{\mathchoice
+%   {\@legendre{0}{1}{}{#1}{#2}}
+%   {\@legendre{1}{.5}{\vphantom{1}}{#1}{#2}}
+%   {\@legendre{2}{0}{\vphantom{1}}{#1}{#2}}
+%   {\@legendre{3}{0}{\vphantom{1}}{#1}{#2}}
+% }
+% \def\dlegendre{\@legendre{0}{1}{}}
+% \def\tlegendre{\@legendre{1}{0.5}{\vphantom{1}}}
+% \makeatother
+\newcommand{\legendre}[2]{{#1\atopwithdelims() #2}}
 
 
 \begin{document}
@@ -257,7 +257,7 @@ noch nicht den Namen von \Hadamard{}.\todo{Wie bekommt
 \begin{gather}\label{eq:had-ungl}
   \abs{\det (a_{ij})}\leq\prod_{j}\left(\sum_{i} \abs{a_{ij}}^{2}\right)^{\sfrac{1}{2}}
 \end{gather}
-Dies ist als \Hadamard sches Problem der maximalen Determinante in die
+Dies ist als \Hadamard sches Problem der maximalen Determinante\todo{Beweis} in die
 Literatur eingegangen. Insbesondere zeigte der Autor, wann Gleichheit
 gilt. Seither tragen die speziellen Matrizen den Namen von
 \Hadamard{}.
@@ -449,7 +449,7 @@ Damit zerfallen die Hadamard"=Matrizen vom Grad~$n$ in
 eine Äquivalenzklasse. Für $n=16$ fand \Hall{} 1961 heraus, dass es
 fünf Äquivalenzklassen gibt\cite{hall1961hadamard}. Vier Jahre später
 zeigte er, dass es $n=20$ zwei Klassen weniger
-hat\cite{hall1965hadamard}.  Die Klassifikation von $n=24$ wurde 1989
+hat\cite{zbMATH01321696}.  Die Klassifikation von $n=24$ wurde 1989
 durch \Kimura{} abgeschlossen\cite{zbMATH04135959}. Aufbauend auf
 einer Arbeit von Ito et.\,al \cite{zbMATH03749020} zeigte er, dass
 60~Äquivalenzklassen existieren. Schließlich existieren für
