--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -91,6 +91,7 @@
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
+\newcommand*{\perm}{\mathrm{perm}}
 
 % nach dem Theoremkopf wird ein Zeilenumbruch eingefügt, die Schrift des
 % Körpers ist normal und der Kopf wird fett gesetzt
@@ -558,7 +559,22 @@ Kronecker"=Produkt:\todo{Eventuell weitere ergänzen}
   Dabei bedeutet QR quadratischer Rest und NR Nichtrest.
 \end{defini}
 
+\subsection{Permanente}
+\label{sec:permanente}
 
+Innerhalb der linearen Algebra ist die Determinante bekannt. Hingegen
+wird die mehr in der Kombinatorik gebräuchliche Permanente weniger
+häufig benutzt. Diese ist wie die Determinante ein Polynom in den
+Einträgen der Matrix und besitzt folgende Definition:
+\begin{defini}[Permanente]
+  Sei $n\in\N$ und $S_{n}$ die symmetrische Gruppe aller Permutationen
+  von $n$. Die \highl{Permanente} einer $n\times n$ Matrix~$A$ ist
+  definiert durch:
+  \begin{gather}
+    \label{eq:permanente}
+    \perm(A)\coloneqq\sum_{\sigma\in S_{n}} \prod_{i=1}^{n} a_{i,\sigma(i)}
+  \end{gather}
+\end{defini}
 
 \chapter{Konstruktion von Hadamard-Matrizen}
 \label{chap:konstr}
