--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -355,3 +355,14 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1311.2427A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{dagum1992approximating,
+  title={Approximating the permanent of graphs with large factors},
+  author={Dagum, Paul and Luby, Michael},
+  journal={Theoretical Computer Science},
+  volume={102},
+  number={2},
+  pages={283--305},
+  year={1992},
+  publisher={Elsevier}
+}
