--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -716,6 +716,7 @@ bezeichnet. Dabei ist $S(1)= H_{1}$ aus \autoref{bsp:hm}.
     \end{pmatrix}
   \end{align*}
 \end{bsp}
+\todo{Etwas zu Permanenten von HMs schreiben}
 
 \section{Konstruktionen nach \Payley}
 \label{sec:konst-payley}
