Name von Hadamard korrekt zitiert

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -74,7 +74,7 @@
 %%%% Namen der verwendeten Autoren
 \begin{nameauth}
   \<Sylvester & James Joseph & Sylvester & >
-  \<Hadamard & Jacques Solomon & Hadamard & Jacques >
+  \<Hadamard & Jacques Solomon & Hadamard & >
   \<Hall & Marshall & Hall junior & >
   \<Kimura & Hiroshi & Kimura & >
   \<Kharaghani & Hadi & Kharaghani & >
@@ -265,9 +265,8 @@ Die Forschung zu \HMen{} begann im Jahr 1867. Der britische
 Mathematiker \Sylvester{} veröffentlichte den Artikel
 \citetitle{Sylvester1867}\cite{Sylvester1867}. Darin stellte er
 Beispiele und Konstruktionsverfahren vor. In dieser Veröffentlichung
-trugen die Matrizen
-noch nicht den Namen von \Hadamard{}.\todo{Wie bekommt
-  man den Joseph?}  Erst im Jahr 1893 bewies \Hadamard{} die Ungleichung
+trugen die Matrizen noch nicht den Namen von \LHadamard{}.  Erst im
+Jahr 1893 bewies \Hadamard{} die Ungleichung
 \begin{gather}\label{eq:had-ungl}
   \abs{\det (a_{ij})}\leq\prod_{j}\left(\sum_{i} \abs{a_{ij}}^{2}\right)^{\sfrac{1}{2}}
 \end{gather}
