Typo und TODO entfernt

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -513,7 +513,7 @@ von Wichtigkeit sind.
 \label{sec:kronecker-produkt}
 
 \begin{defini}
-  Sei$R$ ein Ring, $A$ eine $m\times m$ Matrix und $B$ eine $n\times
+  Sei $R$ ein Ring, $A$ eine $m\times m$ Matrix und $B$ eine $n\times
   n$ Matrix mit $a_{ij}, b_{kl}\in R$ für $i,j=1,\dots,m$ und
   $k,l=1,\dots,n$. Das \highl{Tensorprodukt} $A\otimes B$ in
   \autoref{eq:kron-prod} wird als \highl{Kronecker-Podukt} bezeichnet.
@@ -539,7 +539,7 @@ quadratische Matrizen betrachtet werden, wurde diese Einschränkung
 vorgenommen.
 
 Folgende Eigenschaften gelten für das
-Kronecker"=Produkt:\todo{Eventuell weitere ergänzen}
+Kronecker"=Produkt:
 \begin{itemize}
 \item Assoziativität: $A\otimes(B\otimes C)= (A\otimes B)\otimes C$
   für Matrizen $A$, $B$ und $C$ mit Einträgen aus einem Ring~$R$.
