Darstellung des Beispiels von \det und \perm korrigiert.

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -608,26 +608,28 @@ Determinante einer Matrix.
     \begin{pmatrix}
       a_{11} & a_{12}\\
       a_{21} & a_{22}
-    \end{pmatrix} &= a_{11}a_{22}-a_{12}a_{21} &
+    \end{pmatrix} &= a_{11}a_{22}-a_{12}a_{21}\qquad
     \perm
     \begin{pmatrix}
       a_{11} & a_{12}\\
       a_{21} & a_{22}
-    \end{pmatrix} &= a_{11}a_{22}a_{12}a_{21} \\
+    \end{pmatrix} = a_{11}a_{22}+a_{12}a_{21} \\
     \det
     \begin{pmatrix}
       a_{11} & a_{12} & a_{13}\\
       a_{21} & a_{22} & a_{23}\\
       a_{31} & a_{32} & a_{33}
-    \end{pmatrix} &= a_{11}a_{22}a_{33}+ a_{13}a_{21}a_{32} &
+    \end{pmatrix} &= a_{11}a_{22}a_{33}+ a_{13}a_{21}a_{32} +
+    a_{12}a_{23}a_{31}\\
+    &\quad- a_{13}a_{22}a_{31}- a_{12}a_{21}a_{33}- a_{11}a_{23}a_{32}\\
     \perm
     \begin{pmatrix}
       a_{11} & a_{12} & a_{13}\\
       a_{21} & a_{22} & a_{23}\\
       a_{31} & a_{32} & a_{33}
-    \end{pmatrix} &= a_{11}a_{22}a_{33}+ a_{13}a_{21}a_{32}\\
-    & - a_{13}a_{22}a_{31}- a_{12}a_{23}a_{31} &  &+
-    a_{13}a_{22}a_{31}+ a_{12}a_{23}a_{31}
+    \end{pmatrix} &= a_{11}a_{22}a_{33}+ a_{13}a_{21}a_{32} +
+    a_{12}a_{23}a_{31}\\
+    &\quad+ a_{13}a_{22}a_{31}+ a_{12}a_{21}a_{33}+ a_{11}a_{23}a_{32}\\
   \end{align*}
 \end{bsp}
 Ein weiterer Unterschied der Permanente im Vergleich zur Determinante
