Äquivalenzen von Payley-HM

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -652,6 +652,7 @@ n^{\sfrac{n}{2}}$. Weiterhin gelang es 2005, \Wanless{} die
 Permanenten aller \HMen{} bis zum Grad~28 zu berechnen. Im
 \autoref{chap:konstr} sollen weitere Ergebnisse vorgestellt werden.
 
+
 \chapter{Konstruktion von \HMen}
 \label{chap:konstr}
 
@@ -863,6 +864,18 @@ Hilfe dessen kann die Jacobsthal"=Matrix definiert werden.
   eine \HM{} vom Grad~$2(p+1)$.
 \end{defini}
 
+\todo[inline]{evtl. Beispiel einbauen}
+
+Die Jacobsthal-Matrix~$Q$ ist für den Fall $p\equiv3\pmod{4}$
+schiefsymmetrisch, d.\,h. es gilt $Q^{T}= -Q$, und für den Fall
+$p\equiv1\pmod{4}$ ist sie symmetrisch.
+
+Die \HMen{}, die durch die obigen Konstruktionsverfahren von \Payley{}
+erzeugt wurden, sind üblicherweise nicht äquivalent. Die Äquivalenz
+gilt genau dann, wenn $p=11$ im ersten Konstruktionsverfahren nach
+\Payley{} und $q=5$ im zweiten Konstruktionsverfahren nach
+\Payley{}\cite[Korollar 4.1]{zbMATH05280728}.
+
 \section{Konstruktion nach \Williamson}
 
 \Williamson{} legte in seiner Arbeit
@@ -884,6 +897,19 @@ Matrizen, die er zu einer \HM{} kombinierte.
   \end{gather*}
   eine \HM{} vom Grad~$4k$.
 \end{defini}
+
+
+
+\section{Konstruktion nach Goethals-Seidel}
+
+\section{Konstruktion nach Kimura}
+
+
+
+\section{Kozyklische \HMen}
+
+\subsection{subsection}
+
 
 
 
