--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -274,7 +274,7 @@ Beispiele und Konstruktionsverfahren vor. In dieser Veröffentlichung
 trugen die Matrizen noch nicht den Namen von \LHadamard{}.  Erst im
 Jahr 1893 bewies \Hadamard{} die
 Ungleichung\cite{hadamard1893resolution}\footnote{Eine
-  englishsprachige Übersetzung des Werkes wurde von \Cathain{}
+  englischsprachige Übersetzung des Werkes wurde von \Cathain{}
   angefertigt\cite{cathainhada}.}
 \begin{gather}\label{eq:had-ungl}
   \abs{\det (a_{ij})}\leq\prod_{j=1}^{n}\left(\sum_{i=1}^{n} \abs{a_{ij}}^{2}\right)^{\sfrac{1}{2}}
@@ -414,7 +414,7 @@ $\sfrac{1}{5}\log_{2}(\sfrac{t_{q}-1}{2} +13)$\cite{Livinskyi2012}.
   Dabei steht ein schwarzes Feld für einen Matrixeintrag $+1$ und ein
   weißes Feld kennzeichnet die $-1$. Die Beispiele wurden der
   Webseite\footnote{\url{http://neilsloane.com/hadamard/}} von
-  \Sloane{} entnommen. Er listet \HMen{} bis zum Grad~$256$ auf.
+  \Sloane{} entnommen. Er listet \HMen{} bis zum Grad~$256$ auf\cite{sloanehad}.
   \begin{figure}[htb]
     \centering
     \pgfplotstableread{beispiele/had20.paley}{\hzwanzigpaley}
