Paper von Ferenc S.

--- a/kubieziel-hadamard/hadamard.bib
+++ b/kubieziel-hadamard/hadamard.bib
@@ -437,3 +437,17 @@ url = {http://neilsloane.com/hadamard/}
   month =	 {10},
 }
 
+@PHDTHESIS{2011PhDT378S,
+   author = {{Sz{\"o}ll{\H o}si}, Ferenc},
+    title = "{Construction, classification and parametrization of complex Hadamard matrices}",
+   school = {The University of Wisconsin - Madison},
+     year = 2011,
+   url = {http://arxiv.org/abs/1110.5590},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1110.5590},
+ primaryClass = "math.OA",
+    month = Oct,
+
+}
