--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -91,6 +91,8 @@
   \<Cathain & Padraig & \'O Cath\'ain & >
   \<Sloane & Neil J.\,A. & Sloane & >
   \<Butson & Alton T. & Butson & >
+  \<Koukouvinos & Christos & Koukouvinos & >
+  \<Stylianou & Stella & Stylianou & >
 \end{nameauth}
 
 \newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
@@ -461,6 +463,24 @@ führt im Rahmen dieser Arbeit zu weit und der Leser sei auf die
 Veröffentlichung \citetitle{zbMATH03178660} bzw. die oben vorgestellte
 Promotionsarbeit von \citeauthor{2011PhDT378S} verwiesen.
 
+\begin{defini}[Schiefe \HM{}]
+  Sei $n\in\N$ und $1_{n}$ ein $1\times n$ Vektor, der nur aus
+  Eins"=Einträgen besteht. Weiterhin sei $C$ eine schiefsymmetrische
+  Matrix mit Einträgen aus $\{0,\pm1\}$ sowie $I_{n}$ die $n\times n$
+  Einheitsmatrix. Dann heißt die $n\times n$ Matrix~$H$
+  \highl[\HM|schiefe]{schief}, wenn diese wie folgt geschrieben werden
+  kann:
+  \begin{gather*}
+    H= 
+    \begin{pmatrix}
+      1 & 1_{n-1}^{T}\\
+      -1_{n-1} & C+I
+    \end{pmatrix}
+  \end{gather*}
+\end{defini}
+Eine gute Übersicht über diese Art von \HMen{} bietet die
+Veröffentlichung von \Koukouvinos{} und \Stylianou{}
+\citetitle{zbMATH05280707}\cite{zbMATH05280707}.
 
 \section{Äquivalenz von \HMen}
 \label{sec:aequi-hm}
