TODO: Mehr Eigenschaften von SHM?

--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -480,7 +480,8 @@ Promotionsarbeit von \citeauthor{2011PhDT378S} verwiesen.
 \end{defini}
 Eine gute Übersicht über diese Art von \HMen{} bietet die
 Veröffentlichung von \Koukouvinos{} und \Stylianou{}
-\citetitle{zbMATH05280707}\cite{zbMATH05280707}.
+\citetitle{zbMATH05280707}\cite{zbMATH05280707}.\todo{Werden noch mehr
+Eigenschaften der SHM gebraucht?}
 
 \section{Äquivalenz von \HMen}
 \label{sec:aequi-hm}
