--- a/kubieziel-hadamard/hadamard.ltx
+++ b/kubieziel-hadamard/hadamard.ltx
@@ -789,6 +789,19 @@ c_{2}P^{2}+\dots+ c_{n-1}P^{n-1}$ für eine Permutationsmatrix~$P$ mit
   \end{pmatrix}
 \end{gather*}
 
+Neben der obigen allgemein bekannten Permutationsmatrix werden bei der
+Konstruktion von \HMen{} verallgemeinerte Permutationsmatrizen
+verwendet.
+\begin{defini}[Verallgemeinerte Permutationsmatrix]
+  Sei $n\in\N$. Eine
+  \highl[Permutationsmatrix|verallgemeinerte]{verallgemeinerte
+    Permutationsmatrix} ist eine $n\times n$ Matrix~$P$ über einem
+  assoziativen Ring mit Einselement. In jeder Zeile und Spalte ist
+  genau ein Element ungleich $0$.
+\end{defini}
+Falls die Nicht"=Null"=Einträge gleich $1$ sind, ergibt sich wieder
+die bekannte Permutationsmatrix.
+
 
 \chapter{Konstruktion von \HMen}
 \label{chap:konstr}
